--- a/css/cssMain.css
+++ b/css/cssMain.css
@@ -115,8 +115,8 @@ body{
 
 .note{
     margin-top: 32px;
-    height: 350px;
-    width: 350px;
+   /*height: 3empx;*/
+    width: 26vw;
     display: flex;
     justify-content: center;
     background-color: #ECE9E9;
@@ -129,16 +129,17 @@ body{
 
 
 .javascrip img{
-    height: 250px;
+   /* height: 20vh;*/
     display: block;
-    width: 250px;
+   width: 18vw;
+   margin:3em;
 }
 
 
 .note p{
     position: absolute;
     bottom: -10px;
-    font-size: 50px;
+    font-size: 2.2em;
     line-height: 61px;
 }
 
