--- a/css/cssMain.css
+++ b/css/cssMain.css
@@ -41,6 +41,7 @@ body{
 
 #logo{
     display: inline-block;
+    z-index: 999;
 }
 
 .menu-nav{
@@ -58,7 +59,9 @@ body{
     
 }
 
-
+.menu-navbar1{
+    display: none;
+}
 
 /******************************** Header End***************************************/
 
@@ -89,6 +92,10 @@ body{
 .icons > *{
     height: 1.4em;
     border:0
+}
+
+.menu-ham{
+    display: none;
 }
 
 
@@ -154,13 +161,17 @@ body{
     background: #174E66;
     margin-top: 3rem;
     height: 8rem;
-    display:flex;
-    justify-content: space-around;
-
+    
+    
 }
 
 .footer div{
     margin-top:1.5em
+}
+
+.footer .contenido{
+    display: flex;
+    justify-content: space-around;
 }
 
 
@@ -187,3 +198,151 @@ body{
     
     padding-top: 2em;
 }
+
+.contenido{
+    /* background-color: #174E66; */
+}
+
+/* responsive */
+ 
+@media(min-width: 1200px) {
+    
+
+
+    header{
+        max-width: 1200px;
+        
+    }
+    
+    .navbar-background{
+        display: none;
+        
+    }
+    
+    .content-nav1{
+        position: relative;
+        display: flex;
+        justify-content: space-between;    
+        margin: 0 4em 0 0;
+    }
+
+    .contenido{
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1200px;
+        /* display: flex;
+        flex-direction: column; */
+    }
+
+    .note{
+        width: 350px;
+    }
+
+    .javascrip img{
+        /* height: 20vh;*/
+         display: block;
+        width: 250px;
+        margin:3em;
+     }
+
+
+      .footer{
+         /* position: absolute; */
+         bottom: 0;
+         width: 100vw;
+     } 
+
+} 
+
+@media (max-width: 767px) { 
+    .background-menu{
+        background-color: black;
+        width: 100%;
+        height: 100%;
+    }
+    
+
+    .header{
+        z-index: 10000;
+    }
+        .menu{
+            display: flex;
+            flex-direction: column;
+            align-items: center;    
+            transform:translate( 0,0) ;
+            padding: 0;
+        }
+        
+
+        .menu-nav{
+            position:relative
+        }
+        .navbar-background{
+            height: 0em;
+        }
+
+
+        .menu li{
+            margin: 0.5em;
+        }
+        
+        .is-active{
+            display: flex;
+            flex-direction: column;
+            align-items: center;    
+            transform:translate( 0,0);
+            background-color: white;
+        }
+        
+        .is-active a{
+            text-decoration: none;
+            color:rgba(0, 0,0, 0.8)  ;
+            font-size: 1.8em;
+            padding: .5em;
+        }
+        
+        
+        
+        .panel{
+            position: relative;
+            transition: transform 0.3s ease;
+            transform:translate( 0,-200%) 
+            
+        }
+        
+        .panel.is-active {
+            transform:translate( 0, 0)  
+        }
+        
+        .menu-ham{
+            display: inline;
+        }
+
+        .content-nav1{
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .hero{
+            margin-top: 2.5em;
+            text-align:center;
+            font-size: 2em;
+
+        }
+
+        .notes{
+            grid-template-columns: repeat(2, 1fr);          
+        }
+
+        
+        .background-all{
+            background-color: rgba(0, 0,0, 0.8);    
+            width: 100vw;
+            height: 100vh;
+            position: fixed;
+            top: 0;
+            z-index: 100;
+            
+        }
+
+} 
